# WhisperTube

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  transcribe_youtube_chatgpt.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-package.yml
src/whispertube/: __init__.py  __main__.py  transcriber.py
tests/: conftest.py  test_my_module.py  test_transcribe_youtube.py
